--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
             <div class="grid grid-cols-2 md:grid-cols-4 gap-4 auto-rows-[200px]">
                 <!-- Item 1 (Large) -->
                 <div class="col-span-2 row-span-2 rounded-xl img-zoom-container reveal">
-                    <img src="image/2.JPG" alt="Birthday Party" class="w-full h-full object-cover img-zoom">
+                    <img src="image/2.jpg" alt="Birthday Party" class="w-full h-full object-cover img-zoom">
                 </div>
                 <!-- Item 2 -->
                 <div class="rounded-xl img-zoom-container reveal delay-100">
@@ -536,4 +536,5 @@
 
     </script>
 </body>
+
 </html>
