--- a/index.html
+++ b/index.html
@@ -95,6 +95,23 @@
             padding-bottom: 0px; 
         }
     </style>
+    <!-- Meta Pixel Code -->
+<script>
+    !function(f,b,e,v,n,t,s)
+    {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+    n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+    if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+    n.queue=[];t=b.createElement(e);t.async=!0;
+    t.src=v;s=b.getElementsByTagName(e)[0];
+    s.parentNode.insertBefore(t,s)}(window, document,'script',
+    'https://connect.facebook.net/en_US/fbevents.js');
+    fbq('init', '2108843793259935');
+    fbq('track', 'PageView');
+    </script>
+    <noscript><img height="1" width="1" style="display:none"
+    src="https://www.facebook.com/tr?id=2108843793259935&ev=PageView&noscript=1"
+    /></noscript>
+    <!-- End Meta Pixel Code -->
 </head>
 <body class="font-sans text-brand-black antialiased bg-white">
 
@@ -368,7 +385,7 @@
             <div class="grid grid-cols-2 md:grid-cols-4 gap-4 auto-rows-[200px]">
                 <!-- Item 1 (Large) -->
                 <div class="col-span-2 row-span-2 rounded-xl img-zoom-container reveal">
-                    <img src="image/2.jpg" alt="Birthday Party" class="w-full h-full object-cover img-zoom">
+                    <img src="image/2.JPG" alt="Birthday Party" class="w-full h-full object-cover img-zoom">
                 </div>
                 <!-- Item 2 -->
                 <div class="rounded-xl img-zoom-container reveal delay-100">
@@ -536,5 +553,4 @@
 
     </script>
 </body>
-
 </html>
